# smart-room-booking

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml
.specify/: init-options.json
.specify/extensions/: .registry
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
backend/: pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/v1/: admin.py  auth.py  bookings.py  rooms.py  router.py
backend/app/core/: config.py  rbac.py
backend/app/models/: __init__.py  booking.py  room.py  user.py
backend/app/schemas/: auth.py  booking.py  room.py
backend/app/scripts/: seed.py
backend/app/services/: auth_service.py  booking_service.py  room_service.py
backend/tests/: conftest.py  test_auth.py  test_booking_conflicts.py  test_bookings.py  test_rbac.py  test_rooms.py
backend/tests/e2e/: test_booking_flow.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: BookingForm.tsx  LanguageSwitcher.tsx  Layout.tsx
frontend/src/i18n/: en.json  index.ts  zh.json
frontend/src/pages/: AdminDashboardPage.tsx  LoginPage.tsx  MyBookingsPage.tsx  RoomSearchPage.tsx
frontend/src/services/: api.ts
scripts/: azure-setup.sh  verify-production.sh
specs/001-smart-room-booking/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-smart-room-booking/checklists/: requirements.md
(+1 files in other folders)
